--- a/styles/css/nintendoSwitch.scss
+++ b/styles/css/nintendoSwitch.scss
@@ -22,6 +22,12 @@ body {
 	position: relative;
 	z-index: 1;
 	margin: 0 auto;
+
+	.logo {
+		overflow: hidden;
+		margin-top: 0;
+		padding-top: 5px;
+	}
 }
 
 .body {
