--- a/styles/css/variables.scss
+++ b/styles/css/variables.scss
@@ -1,3 +1,7 @@
 $font: 'Archivo', sans-serif;
 $card-border: solid black 10px;
-$lighter-card-color: lighten(#60be86, 10%);
+$home-background-color: #f2f2f2;
+$about-me-background-color: #4BBFC3;
+$hobbies-background-color: #60be86;
+$contact-background-color: #f5f5f5;
+$lighter-card-color: lighten($hobbies-background-color, 10%);
